Fixes overflow hidden problem in lists in single item views

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -30,7 +30,7 @@
 }
 
 /* Item View */
-p.item-long-description, p.item-short-description {
+p.item-long-description, p.item-short-description, .item-view-association-list a {
     overflow: auto;
     white-space: normal;
 }
